# xdrip-stats

./: Cargo.toml  LICENSE  README.md  flake.nix
.gitea/workflows/: build.yaml
nix/devshell/: flake-module.nix
nix/rust-overlay/: flake-module.nix
src/: direction.rs  error.rs  glucose_reading.rs  main.rs  state.rs  status.rs  unit.rs
src/mangohud/: mod.rs
src/waybar/: mod.rs  output.rs  text.rs  tooltip.rs
