[package]
name = "xdrip-stats"
publish = false
version = "0.1.0"

edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive", "env"] }
influxdb = { version = "0.7.2", features = ["derive"] }
tokio = { version = "1.37.0", features = ["time", "macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4"

[profile.release]
strip = true
lto = true
opt-level = 3
panic = "abort"
codegen-units = 1
